--- a/commissions.html
+++ b/commissions.html
@@ -369,7 +369,8 @@ all this freedom is a bit confusing if you're not used to dealing with codes, so
 　　　　　･ <a href="https://cute.home.kg/iii" target="_blank"><font color="#ad9593">midnight angel</font></a><br>
 　　　　　･ <a href="https://cute.home.kg/iv" target="_blank"><font color="#b1c0d8">happy dreams</font></a><br>
 　　　　　･ <a href="https://cute.home.kg/v" target="_blank"><font color="#ba3434">strawberry valentine</font></a><br>
-　　　　　･ <a href="https://cute.home.kg/vi" target="_blank"><font color="#838a70">fairy garden</font></a>
+　　　　　･ <a href="https://cute.home.kg/vi" target="_blank"><font color="#838a70">fairy garden</font></a><br>
+　　　　　･ <a href="https://cute.home.kg/vii" target="_blank"><font color="#dfdae3">pure heart</font></a>
 
 <br><br><br>
 these are just some collage examples of the aesthetics i'm used to. my website represents the first aesthetic, but it could be made visually in infinite ways ; i can make it more simple or even focused in a specific character / series !
@@ -394,9 +395,10 @@ all the text will be edited later on, as you wish.<br>
 #mm { color: #aa998c; }
 </style>
 <font color="#e2c993" style="font-size:9px">♡</font>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#b7a596">contact form</font></a> , through my email ( letters@middlepot.com ) or through one of these :<br><br>
-　　　<font color="#bfa57a" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/pooftie" target="_blank" >@pooftie</a>
-　　<font color="#bfa57a" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/pooftie" target="_blank" >@pooftie</a>
-　　<font color="#bfa57a" style="font-size:10px">discord :</font> <a id="mm" href="https://discord.gg/Wq5NhFm" target="_blank" >puf#0008</a>
+　　　　<font color="#bfa57a" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/pooftie" target="_blank" >@pooftie</a>
+　　　　<font color="#bfa57a" style="font-size:10px">tumblr :</font> <a id="mm" href="https://www.tumblr.com/blog/pooftie" target="_blank" >@pooftie</a><br><br>
+　　　　<font color="#bfa57a" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/pooftie" target="_blank" >@pooftie</a>
+　　　　　<font color="#bfa57a" style="font-size:10px">discord :</font> <a id="mm" href="https://discord.gg/Wq5NhFm" target="_blank" >puf#0008</a>
 
 <br>
 
