--- a/archive.html
+++ b/archive.html
@@ -322,6 +322,98 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/zncXxx2.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>january . 09 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img src="https://i.imgur.com/qr3Z19k.gif"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+are you full of hopes and dreams for this new year ? i hope your year has started softly ..
+i am absolutely the happiest, it's been a lovely year already and i'm enjoying it wholeheartedly <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i'm getting a lot of work and doing my best to achieve my ideal self, i'm leaving behind everything that weights me down and focusing on my happiness.
+in some months i will be living with bubu, our own little home <sub><sub><img src="https://i.imgur.com/QC2tuUn.gif"/></sub></sub>
+we're working hard to prepare everything in time, this is the beginning of a whole new phase of our lives <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font>
+
+i intend to post my works here on the blog more often from now on for keeping track of my improvement and receiving feedback.. i'm always experimenting new techniques and sadly some things i do get lost in time
+this will be my only and exclusive platform for sharing my art. i will keep using my instagram stories for disclosure ( specially if work related ), since it's the most convenient way to reach interested people at the moment, but i will try to redirect people for the respective links instead of reposting stuff there randomly.. i want to be more organized & professional
+i post here my favorite stuff i feel somewhat proud of, but i actually checked my posts and realized i forgot to show some really nice works i've done .. and i don't want them to be forgotten !!
+it's not too late to give them some love, so i will post today some stuff i still keep in my folders but haven't posted <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+first one will be a little casual outfit. i've been sewing a lot lately, but specially for fixing + modifying vintage clothing i got from thrift stores. this one is an example of customized blouse + self made skirt :</pre><br>
+<br>
+
+<center><img width="400px" height="auto" src="https://i.imgur.com/WLAJtba.png"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it looks adorable with cream lacy socks & a pair of brown lolita mary janes, such a cozy look <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i've been feeling a lot more confident about my appearance for i am working on making it translucent from now on : everything i'm proud to show about who i am inside, being seen clearly.
+fashion is really important for me, a path to purity somehow. looking at yourself kindly and recognizing your body as your precious place on earth, your home, and making this home a comfortable, healthy & beautiful place <sub><sub><img src="https://i.imgur.com/qGaUN8w.gif"/></sub></sub>
+i do have some more clothing i could show here but for today let's keep just this one, i don't want to be repetitive <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+now i'll show something a little different from usual, a mini junk journal i made :</pre></font></font><br>
+<br>
+
+<center><img width="auto" height="215px" src="https://i.imgur.com/wXXBib3.png">　<img width="auto" height="215px" src="https://i.imgur.com/Nm8qUoo.png"><br><br>
+<img width="410px" height="auto" src="https://i.imgur.com/Cqq5BBR.png"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i love making junk journals because i can use of all stationery that have been forgotten into something new and interesting !!
+this one will be a little exception since it's still empty, but journaling is one of the few hobbies i have and don't usually share online because it's very intimate for me.
+i like to be 100% honest with them so i write & scribble things that i wouldn't like anyone to see.. deep stuff <sub><sub><img src="https://i.imgur.com/uztazMI.gif"/></sub></sub>
+
+this next one will be a very old one, it's a precious sleeping ( life size ) mouse i needle felted and was sold out almost a year ago, but i'm glad i still have the pictures because i feel calm just looking at him .. <font color="#d3a5a5" style="font-size:11px;">♡</font></pre></font></font><br>
+<br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/nPPuXOd.png"><br><br>
+<img width="350px" height="auto" src="https://i.imgur.com/9gyvoWS.png"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this one is the most realistic work with needle felt i ever made, i love it...
+i'm thinking about felting a realistic sleeping bunny, let's see how it goes !
+
+i've tried out some embroidery techniques and recently made these really cute envelope shaped purses :</pre></font></font><br>
+<br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/K5BTvP1.gif"><br><br>
+<img width="350px" height="auto" src="https://i.imgur.com/xXxIDMI.gif"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the concept of envelope shaped purses is absolutely adorable for me !!
+these were sold out fast and i'm still thinking i should have made one for myself.. maybe in the near future ?
+
+there is also content i make exclusively for my accounts ( photography, edits, writing, scribbles, story games / templates, ascii art.. ) so i won't show them here because they are all perfectly accessible if you go to my links. if i feel it's necessary some of my best ones will be in my portfolio as well !
++ i can't show specific content like commissions publicly, for privacy reasons,,
+besides these, i will post everything i do and feel comfortable sharing online. it's important to register my progress for improving consistently, right ?
+
+i have multiple projects going on at the moment and i want to make satisfactory progress in all of them this year <sub><sub><img src="https://i.imgur.com/1w70W9v.gif"/></sub></sub>
+i must be careful to do everything in a healthy pace, as i said i'll be working more than usual so it can take a while until you see big updates, please be patient <font color="#d3a5a5" style="font-size:11px;">♡</font></pre>
+<br>
+xoxo <sub><sub><img src="https://i.imgur.com/4QdUY98.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/zncXxx2.gif"/></center>
+
+<br><br><br>
+
+<br>
+
 
 <center><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/><img src="https://i.imgur.com/QyDzU3J.png"/></center>
 <br><br>
