--- a/portfolio.html
+++ b/portfolio.html
@@ -416,6 +416,7 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone case decor<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="250px" height="auto" src="https://i.imgur.com/qgTfLuE.png"><br><br>
 <img width="250px" height="auto" src="https://i.imgur.com/2BIzI62.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
